--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@ai-sdk/openai": "latest",
     "@ai-sdk/react": "latest",
     "@ai-sdk/ui-utils": "latest",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@vercel/blob": "^0.23.4",
     "ai": "latest",
+    "dayjs": "^1.11.13",
     "next": "latest",
     "openai": "4.52.6",
     "react": "^18",
